Eliminated 'margin-right' line in pic-title-header-module.scss to fix misaligned UU logo at small break point.

--- a/src/components/pic-title-header/pic-title-header.module.scss
+++ b/src/components/pic-title-header/pic-title-header.module.scss
@@ -22,7 +22,6 @@
 	$desktopImgSize: 300px;
 	max-width: $desktopImgSize;
 	max-height: $desktopImgSize;
-	margin-right: 48px;
 	margin-bottom: 16px;
 
 	@include until($endSmallScreenSize) {
